# fast-langchain-server

./: .envrc  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  example_agent.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish-pypi.yml  security.yml
docs/: GITHUB_ACTIONS_SETUP.md  GIT_WORKFLOW_GUIDE.md  SECURITY_CHECKS.md  fastmcp-inspiration.md
fast_langchain_server/: __init__.py  a2a.py  a2a_client.py  auth.py  authorization.py  cli.py  context.py  lifespan.py  memory.py  middleware.py  server.py  serverutils.py  telemetry.py
scripts/: PUBLISH_README.md  publish-to-pypi.sh  publish.py
tests/: conftest.py  test_a2a.py  test_auth.py  test_authorization.py  test_context.py  test_inspect_agent.py  test_lifespan.py  test_memory.py  test_middleware.py  test_server.py
