[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fast-langchain-server"
version = "0.2.0"
description = "Production HTTP server for LangChain/LangGraph agents — OpenAI-compatible API, streaming, session memory and agent discovery"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["langchain", "langgraph", "agent", "server", "fastapi", "llm"]

dependencies = [
    # LangChain / LangGraph  (latest as of 2026-04)
    "langchain>=1.2.15",
    "langgraph>=1.1.6",
    "langchain-openai>=1.1.12",
    "langchain-core>=1.2.28",
    # HTTP server
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sse-starlette>=1.6.0",
    "httpx>=0.25.0",
    # Validation & settings
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # CLI
    "typer>=0.9.0",
    # Optional: Redis memory
    "redis>=5.0.0",
    # Optional: OpenTelemetry
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.40b0",
    "opentelemetry-instrumentation-httpx>=0.40b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[project.scripts]
fast-langchain-server = "fast_langchain_server.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["fast_langchain_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
